@@ -26,13 +26,16 @@ Show general information about PEF configuration.
 Fetch configuration information from the BMC.
 .TP
 \fB\-i\fR, \fB\-\-commit\fR
-Update configuration information to the BMC from a config file.
+Update configuration information to the BMC from a config file or key pairs.
 .TP
 \fB\-d\fR, \fB\-\-diff\fR
 Show differences between the BMC and a config file.
 .TP
 \fB\-f\fR FILENAME, \fB\-\-filename\fR=\fIFILENAME\fR
 Specify a PEF config file for PEF checkout/commit/diff.
+.TP
+\fB\-k\fR "KEY=VALUE", \fB\-\-key\-pair=\fR"KEY=VALUE"
+Specify KEY=VALUE pairs for checkout/commit/diff.  This option can be used multiple times.
 .TP
 \fB\-S\fR "SECTION", \fB\-\-section=\fR"SECTION"
 Specify a SECTION for checkout.  This option can be used multiple times.
