@@ -15,6 +15,77 @@
 #include "pef-config-sections.h"
 
 static pef_diff_t
+pef_diff_keypair (pef_config_state_data_t *state_data,
+                  struct keypair *kp)
+{
+  char *keypair = NULL;
+  char *section_name;
+  char *key_name;
+  char *value;
+  pef_diff_t rv = PEF_DIFF_FATAL_ERROR;
+
+  if (!(keypair = strdup (kp->keypair)))
+    {
+      perror("strdup");
+      goto cleanup;
+    }
+
+  section_name = strtok (keypair, ":");
+  key_name = strtok (NULL, "=");
+  value = strtok (NULL, "");
+
+  if (!(section_name && key_name && value))
+    {
+      fprintf (stderr, "Invalid KEY-PAIR spec `%s'\n", kp->keypair);
+      rv = PEF_DIFF_NON_FATAL_ERROR;
+      goto cleanup;
+    }
+
+  section_name = strtok (section_name, " \t");
+  key_name = strtok (key_name, " \t");
+  value = strtok (value, " \t");
+
+  rv = pef_config_section_diff_value (state_data,
+                                      section_name,
+                                      key_name,
+                                      value);
+ cleanup:
+  if (keypair)
+    free (keypair);
+  return rv;
+}
+
+static pef_diff_t
+pef_diff_keypairs (pef_config_state_data_t *state_data)
+{
+  struct pef_config_arguments *args;
+  struct keypair *kp;
+  pef_diff_t rv = PEF_DIFF_FATAL_ERROR;
+  pef_diff_t ret = PEF_DIFF_SAME;
+
+  args = state_data->prog_data->args;
+
+  kp = args->keypairs;
+  while (kp)
+    {
+      pef_diff_t this_ret;
+
+      if ((this_ret = pef_diff_keypair (state_data,
+                                        kp)) == PEF_DIFF_FATAL_ERROR)
+        goto cleanup;
+
+      if (this_ret == PEF_DIFF_NON_FATAL_ERROR)
+        ret = PEF_DIFF_NON_FATAL_ERROR;
+
+      kp = kp->next;
+    }
+
+  rv = ret;
+ cleanup:
+  return rv;
+}
+
+static pef_diff_t
 pef_diff_file (pef_config_state_data_t *state_data)
 {
   struct pef_config_arguments *args;
@@ -83,7 +154,10 @@ pef_diff (pef_config_state_data_t *state_data)
 
   args = state_data->prog_data->args;
 
-  ret = pef_diff_file (state_data);
+  if (args->keypairs)
+    ret = pef_diff_keypairs (state_data);
+  else
+    ret = pef_diff_file (state_data);
 
   if (ret == PEF_DIFF_SAME)
     return PEF_ERR_SUCCESS;
